# optifeed

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
optifeed/: pipeline.py
optifeed/api/: app.py
optifeed/bi/: financial_kpis.py  macro_analyzer.py  micro_analyzer.py  news.py
optifeed/bi/llm/: macro_analyzer.py  micro_analyzer.py
optifeed/db/: models.py  sqlite_utils.py
optifeed/pipeline/: alerts.py  daily_summary.py  scheduler.py
optifeed/telegram/: telegram.py
optifeed/utils/: config.py  llm.py  logger.py  rabbitmq.py
optifeed/worker/: tasks.py  worker.py
src/: pipeline.py
src/api/: app.py
src/bi/: financial_kpis.py  news.py
src/bi/llm/: macro_analyzer.py  micro_analyzer.py
src/db/: models.py  sqlite_utils.py
src/telegram/: telegram.py
src/utils/: config.py  logger.py  rabbitmq.py
src/worker/: tasks.py  worker.py
